# WorkOnOpenCV

./: .gitignore  README.md
pid-ifce/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
pid-ifce/00/: main.cpp
pid-ifce/practice/: practice1.cpp  practice2.cpp
